# rust_hello

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  deploy.sh  flake.nix
charts/rust-hello/: Chart.yaml  values.yaml
charts/rust-hello/templates/: NOTES.txt  _helpers.tpl  daemonset.yaml  hpa.yaml  ingress.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
src/: main.rs
