[package]
name = "rust_hello"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
kube = { version = "2.0", default-features = false, features = ["client", "config", "runtime", "rustls-tls"] }
humantime = "2.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
k8s-openapi = { version = "0.26", features = ["v1_30"] }

# rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
